# todone

./: CMakeLists.txt  README.md
res/: res.rc
src/: delegate.cpp  delegate.h  main.cpp  recordtextedit.cpp  recordtextedit.h  structure.cpp  structure.h  structure.ui  todotablewidget.cpp  todotablewidget.h
src/delegate/: datatimedelegate.cpp  datatimedelegate.h  globaldelegate.cpp  globaldelegate.h  prioritydelegate.cpp  prioritydelegate.h
